Description: When I open pdf doc in Draw I see this in the log: warn:legacy.osl:435964:435964:unotools/source/config/moduleoptions.cxx:474: unknown factory And indeed - SvtModuleOptions::EFactory::STARTMODULE not handled in SvtModuleOptions::GetFactoryShortName code is latest from git. Steps to Reproduce: 1. Import a PDF doc into Draw 2. check the logs Actual Results: You will find warn:legacy.osl:435964:435964:unotools/source/config/moduleoptions.cxx:474: unknown factory Expected Results: no warning Reproducible: Always User Profile Reset: Yes Additional Info: N/A
https://gerrit.libreoffice.org/c/core/+/116794
Sergey Fukanchik committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/41c01e48f695dd41ef2f39e83b22ca7b9dbab658 tdf#142702 Handle STARTMODULE in SvtModuleOptions::GetFactoryShortName It will be available in 7.3.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
A polite ping to Sergey Fukanchik: Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing? Thanks
Yes, I built LO from git and issue is gone.