tdf#142702 Handle STARTMODULE in SvtModuleOptions::GetFactoryShortName

Change-Id: I06064eb3ff3e77cd0fcc6e211c6baf07adcc3096
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/116794
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>